# Judgemark-v2lp

./: .env.example  .gitignore  LICENSE  README.md  judgemark-v2.py  my_judgemark_runs.json  pyproject.toml  requirements.txt  research_log.md
config/: constants.py
core/: benchmark.py  scoring.py  separability.py  stability.py
data/: judge_prompts.json
judgemark_v2lp/: benchmark.py  scoring.py  separability.py  stability.py
judgemark_v2lp/config/: constants.py
judgemark_v2lp/utils/: api.py  file_io.py  logging_setup.py  visualization.py
nbs/: 01_res.ipynb  02_recomp.ipynb
results/: scores.csv
results/stats/: claude-3-5-haiku-20241022.json  claude-3-5-sonnet-20240620.json  deepseek-ai__deepseek-r1-distill-llama-70b.json  deepseek-ai__deepseek-r1.json  deepseek__deepseek-r1-distill-qwen-14b.json  gemini-2-0-flash-thinking-exp-1219.json  gpt-4o-2024-11-20.json  gpt-4o-mini.json  liquid__lfm-7b.json  meta-llama__llama-3-1-405b-instruct.json  meta-llama__llama-3-1-8b-instruct.json  microsoft__wizardlm-2-8x22b.json  ministral__Ministral-3b-instruct.json  mistralai__mistral-large-instruct-2411.json  mistralai__mistral-small-24b-instruct-2501.json
utils/: api.py  state.py  stats.py  visualization.py
