[project]
name = "judgemark_v2lp"
version = "0.1.0"
description = "**Judgemark V2** is a benchmark that evaluates how well a language model can judge creative writing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "great-tables>=0.18.0",
    "loguru>=0.7.3",
    "matplotlib>=3.7",
    "polars>=1.31.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.10",
    "transformers>=4.26",
]


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]


[tool.setuptools.packages.find]
where = ["."]  # search the root directory
include = ["judgemark_v2lp*"]
